# ai-ocr-poc

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONDITIONAL_VALIDATION.md  FUNCTIONAL_PROGRAMMING.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SPLITTING_VALIDATION.md  SPLIT_VALIDATION_README.md  SUMMARY.md  demo_conditional_validation.py  example_ground_truth.json  example_validate_split_docs.py  examples.py  invoice_extractor.py  main.py  pytest.ini  requirements.txt  run_workflow.py  test_integration.py  test_report_generation.py  test_txt_validation.py  test_validate_split_docs.py  test_workflow_conditional.py  validate_split_docs.py  validate_splitting.py
examples/: examples.py  (+3 more)
prod-ocr/: .dockerignore  .env.example  .funcignore  .gitignore  AZURE_FUNCTIONS_SETUP.md  CLAUDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  ENVIRONMENT_SETUP_SUMMARY.md  QUEUE_STORAGE_SUMMARY.md  README.md  SECURITY_IMPROVEMENTS.md  SERVICE_BUS_QUICK_START.md  docker-compose.yml  function_app.py  get_results.py  get_results_servicebus.py  host.json  local.settings.json.example  local.settings.json.production.example  pyproject.toml  pytest.ini  requirements.txt  send_task.py  send_task_servicebus.py  setup_dev_environment.ps1  setup_dev_environment.sh  split_documents.py  test_e2e_local.py  test_local_run.py  test_pipeline.py
prod-ocr/.claude/: settings.local.json
prod-ocr/docs/: API_REFERENCE.md  ARCHITECTURE.md  AZURE_FUNCTIONS_SETUP.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  ENVIRONMENT_SETUP.md  PROJECT_OVERVIEW.md  QUEUE_STORAGE_SETUP.md  README.md  function_app.md
(+3358 files in other folders)
